# char_lcd_rgb_i2c

./: Cargo.toml  LICENSE  README.md  build_armv7
.cargo/: config.toml
examples/: lcd_demo.rs
src/: lib.rs
